# terraform-practice

./: .gitignore  .terraform.lock.hcl  locals.tf  main.tf  variables.tf
app_sample/: Dockerfile  pyproject.toml
app_sample/app/: json_logging.py  main.py
aws_graphrag/: neptune.tf  notebook.tf  provider.tf  variables.tf
aws_graphrag/sagemaker/notebook/: main.ipynb
aws_mail_driven_app/: .gitignore  .terraform.lock.hcl  main.tf  provider.tf
aws_mail_driven_app/app_sample/: compose.yaml
aws_mail_driven_app/lambda/: build-lambda.sh
aws_mail_driven_app/lambda/src/: main.py
aws_mail_driven_app/modules/dns/: variables.tf
data_platform_sample/: main.tf  terraform.tfstate  terraform.tfstate.backup  variable.tf
data_platform_sample/aws/: acm.tf  athena.tf  database.tf  ecs.tf  glue.tf  kms.tf  lambda.tf  main.tf  provider.tf  route53.tf  s3.tf  variables.tf
data_platform_sample/gcp/: provider.tf
gcp_streaming_platform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  provider.tf  terraform.tfstate  variable.tf
gcp_streaming_platform/app/: Dockerfile  go.mod  main.go
modules/acm/: main.tf  outputs.tf  variables.tf
modules/dns/: main.tf  outputs.tf  variables.tf
modules/ecr/: main.tf
modules/ecs/: main.tf
modules/lambda/: main.tf  output.tf  variables.tf
modules/mail-receive-trigger/: output.tf
modules/network/: main.tf
modules/s3/: main.tf  output.tf
modules/ses/: main.tf  output.tf  variables.tf
vpc-opensearch/: README.md  bastion.tf  main.tf  opensearch.tf  output.tf  providers.tf  vpc.tf  vpc_endpoints.tf
(+24 files in other folders)
