[tool.poetry]
name = "app-sample"
version = "0.1.0"
description = ""
authors = ["KatHaruto <haru10.jm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
